<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D71F5BD5"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="163dp"
    tools:layout_editor_absoluteY="233dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pickObjButton_Map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#8BC34A"
            android:text="@string/pickObject"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/backButton_Map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="@string/backButton"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        tools:context=".MapsActivity" />

    <TextView
        android:id="@+id/pickedObject_Map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pickedObject"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFEB3B"
        android:textStyle="bold" />

    <Button
        android:id="@+id/findButton_Map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#DC1E1E"
        android:text="@string/findButton"
        android:textStyle="bold" />

    <WebView
        android:id="@+id/webView_Map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>