<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpeningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D71F5BD5"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="246dp">

        <ImageView
            android:id="@+id/armsPicture_Main"
            android:layout_width="match_parent"
            android:layout_height="461dp"
            android:background="#D71F5BD5"
            app:srcCompat="@drawable/herb" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D71F5BD5"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#F7FF21"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D71F5BD5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startButton_Main"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#8BC34A"
                android:text="@string/startButton"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/helpButton_Main"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#C11313"
                android:text="@string/helpButton"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/exitButton_Main"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFEB3B"
                android:text="@string/exitButton"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>